Corrected text alignment

--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,22 @@ text-align:center;
     border-radius:10px;
     display:grid;
     background-color: hsl(0, 0%, 100%);
-    text-align: left;
+    text-align:left;
     max-width: 600px;
+    min-width: 400px;
+    
 
 }
 
 .product__content {
+    border: solid black 2px;
     display:grid;
+    justify-content: center;
     gap: 1rem;
-    padding:1rem;
+    padding:1.5rem;
     flex-wrap: wrap;
+    width:70%;
+    margin:auto;
 }
 
 .product__image {
@@ -63,7 +69,8 @@ gap: 1.75rem;
 
 .original-price{
     position:relative;
-    top:10px;
+    top:13px;
+    color:hsl(228, 12%, 48%)
 }
 
 .current-price {
